src/test/resources/wacc_examples/valid/imports/importFiles/importsDoubleImport.wacc
begin
    include "../doubleImport.wacc"
    skip
end