src/test/resources/wacc_examples/invalid/semanticErr/imports/importFiles/fileThatImportsFoo.wacc
begin
    include "fileWithFooFunction.wacc"
    skip
end